fix: Small documentation typo fixes

--- a/wallabag_kindle_consumer/templates/base.html
+++ b/wallabag_kindle_consumer/templates/base.html
@@ -15,11 +15,11 @@
 <body>
 <div class="container-fluid">
 
-    <h1>Walabag Kindle Consumer</h1>
+    <h1>Wallabag Kindle Consumer</h1>
 
     <p>This transfers all articles tagged with {{ tags|join(", ") }} in <a
             href="{{ wallabag_host }}">{{ wallabag_host }}</a>
-        to the given kindle account.</p>
+        to the given Kindle account.</p>
 
     {% block body %}{% endblock %}
 
@@ -28,7 +28,7 @@
 <footer class="footer">
     <div class="container">
         <span class="text-muted">Wallabag-Kindle-Consumer. Source is on
-            <a href="https://github.com/janLo/wallabag-kindle-consumer">Github</a>.</span>
+            <a href="https://github.com/natilou/wallabag-kindle-consumer">GitHub</a>.</span>
     </div>
 </footer>
 <!-- Optional JavaScript -->
