--- a/wallabag_kindle_consumer/templates/index.html
+++ b/wallabag_kindle_consumer/templates/index.html
@@ -27,7 +27,7 @@
                     {{ forms.input('password', "Password", type='password', description='Your wallabag password at ' + wallabag_host + ". The password will not be stored", data=data, errors=errors) }}
                 </div>
                 <div class="row">
-                    {{ forms.input('kindleEmail', "Kindle Email", type='email', description='Your kindle email addess ' + wallabag_host, data=data, errors=errors) }}
+                    {{ forms.input('kindleEmail', "Kindle Email", type='email', description='Your Kindle email address at ' + wallabag_host, data=data, errors=errors) }}
                     {{ forms.input('notifyEmail', "Alt. Email",type='email', description='An alternative email where we can send any problems. ' + wallabag_host, data=data, errors=errors) }}
                 </div>
                 <div class="row">
